Quick pass of FindBugs 'method invokes inefficient Number constructor' fixes.